Switching to spaCy for sentence parsing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/secrets.cpython-37.pyc
 __pycache__/secrets.cpython-38.pyc
 .DS_Store
 secrets.py
+server/__pycache__/secrets.cpython-37.pyc
+server/__pycache__/secrets.cpython-38.pyc
+server/demo/*
