--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .ipynb_checkpoints/
 .cache-willfurtado
+.cache
 __pycache__/secrets.cpython-37.pyc
 __pycache__/secrets.cpython-38.pyc
 .DS_Store
@@ -7,3 +8,6 @@ secrets.py
 server/__pycache__/secrets.cpython-37.pyc
 server/__pycache__/secrets.cpython-38.pyc
 server/demo/*
+server/__pycache__/secrets.cpython-39.pyc
+server/__pycache__/playlist_generator.cpython-39.pyc
+server/__pycache__/credentials.cpython-39.pyc
